--- a/inventory/sweatshirts.html
+++ b/inventory/sweatshirts.html
@@ -1,4 +1,4 @@
-<!-- TODO VALIDATION: WARNING, NO h2-h6 HEADER FOR SECTION ROW -->
+<!-- TODO VALIDATION:  -->
 
 
 <!DOCTYPE html>
@@ -7,11 +7,40 @@
     <meta charset="UTF-8">
     <title>Offline - Sweatshirts</title>
     <link type="text/css" rel="stylesheet" href="../css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
 <header>
     <h1 class="title">OFFLINE APPAREL</h1>
 </header>
+<script>
+    $(document).ready(function () {
+        $('body').css('display', 'none'); //GOT THIS CODE FROM HERE https://css-tricks.com/forums/topic/fade-out-between-pages/
+        $('body').fadeIn(1000);
+        $('.link').click(function() {
+
+            event.preventDefault();
+
+            newLocation = this.href;
+
+            $('body').fadeOut(1000, newpage);
+
+        });
+        function newpage() {
+
+            window.location = newLocation;
+
+        }
+        $('.resizeImage').mouseenter(function() {
+            $(this).stop().animate({ width: "+=3%", height: "+=3%" }, 200);
+        });
+        $('.resizeImage').mouseleave(function() {
+            var x = $(this).attr('width'),
+                y = $(this).attr('height');
+            $(this).stop().animate({ width: x, height: y }, 200);
+        });
+    })
+</script>
 <nav class="navbar">><!-- NAVBAR AND DROPDOWN CODE TAKEN FROM https://www.w3schools.com/howto/howto_css_dropdown_navbar.asp -->
         <span class="dropdown">
             <button class="dropbtn">&#9776; &#11208; Sweatshirts<!-- UNiCODE NUMBERS WERE TAKEN FROM HERE http://xahlee.info/comp/unicode_arrows.html -->
@@ -27,29 +56,31 @@
         </span>
 </nav>
 <!-- Photo Grid -->
-<section class="row"><!-- IMAGE GRID CODE WAS TAKEN FROM https://www.w3schools.com/howto/howto_js_image_grid.asp -->
+<section class="row">
+    <h2>--</h2>
+    <!-- IMAGE GRID CODE WAS TAKEN FROM https://www.w3schools.com/howto/howto_js_image_grid.asp -->
     <section id="sweatshirts" class="column">
         <h4>SWEATSHIRTS</h4>
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
-        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
+        <img src="../images/sweatshirts/blkSweatshirt.png" height="300" width="300" class="resizeImage" alt="sweatshirt">
     </section>
 </section>
 <footer>
