--- a/contact/support.html
+++ b/contact/support.html
@@ -1,4 +1,4 @@
-<!-- TODO VALIDATION: PASSED -->
+<!-- TODO VALIDATION: -->
 
 
 <!DOCTYPE html>
@@ -7,10 +7,30 @@
     <meta charset="UTF-8">
     <title>Offline - Support</title>
     <link type="text/css" rel="stylesheet" href="../css/style.css">
-<body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<body class="support">
 <header>
-    <h1 class="title">OFFLINE APPAREL</h1>
+    <h1 class="title" id="hideTitle">OFFLINE APPAREL</h1>
 </header>
+<script>
+    $(document).ready(function () {
+        $('body').css('display', 'none'); //GOT THIS CODE FROM HERE https://css-tricks.com/forums/topic/fade-out-between-pages/
+        $('body').fadeIn(1000);
+
+        $('.link').click(function() {
+            event.preventDefault();
+            newLocation = this.href;
+            $('body').fadeOut(1000, newpage);
+
+        });
+        function newpage() {
+
+            window.location = newLocation;
+        }
+    })
+</script>
+
 <nav class="navbar">><!-- NAVBAR AND DROPDOWN CODE TAKEN FROM https://www.w3schools.com/howto/howto_css_dropdown_navbar.asp -->
         <span class="dropdown">
             <button class="dropbtn">&#9776; &#11208; Contact<!-- UNiCODE NUMBERS WERE TAKEN FROM HERE http://xahlee.info/comp/unicode_arrows.html -->
@@ -28,20 +48,21 @@
 <h2>Get in Touch</h2>
 <p>Leave your name and email and your issue and we will get back to you as soon as possible. Thank you!</p>
 <!-- THIS CODE WAS TAKEN FROM https://www.w3schools.com/html/html_form_input_types.asp -->
+<section>
 <form>
     First name:<br>
     <label>
-        <input type="text" name="firstname">
+        <input type="text" name="firstname" size="32">
     </label>
     <br>
     Last name:<br>
     <label>
-        <input type="text" name="lastname">
+        <input type="text" name="lastname" size="32">
     </label>
     <br>
     Email:<br>
     <label>
-        <input type="email" name="email">
+        <input type="email" name="email" size="32">
     </label>
     <br>
     <p>
@@ -54,8 +75,9 @@
         <input type="radio" name="subscribe" value="No">
     </label>No<br>
     <br><br>
-    <input type="submit">
+    <input type="submit" id="submit">
 </form>
+</section>
 <footer>
     <p>
 
